# tg_parser_example

./: .env-example  .gitignore  Dockerfile  Makefile  README.md  db.sqlite3  main.py  manage.py  pyproject.toml  requirements.txt  session_to_string.py  test_session.session  test_session.txt  tg_parser.py  tg_search.py
parserexample/: asgi.py  settings.py  urls.py  wsgi.py
parserexample/parser/: admin.py  apps.py  models.py  parser.py  urls.py  views.py
parserexample/parser/migrations/: 0001_initial.py  0002_alter_channelstats_options_and_more.py  0003_telegramchannel_creation_date_and_more.py  0004_telegramchannel_average_views.py  0005_alter_telegramchannel_pinned_messages.py  0006_alter_telegramchannel_pinned_messages.py
parserexample/parser/templates/: channel_detail.html  channels_list.html  parse_channel.html
parserexample/templates/: base.html  index.html  notifications.html
